--- a/sms-rest/src/main/resources/application.properties
+++ b/sms-rest/src/main/resources/application.properties
@@ -21,3 +21,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/rabbit?useUnicode=true&charact
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+server.port=8088
