--- a/sms-rest/pom.xml
+++ b/sms-rest/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.roc</groupId>
 	<artifactId>sms-rest</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>sms-rest</name>
 	<description>Student management system</description>
 
@@ -72,6 +72,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+                    <mainClass>com.roc.sms.SmsRestApplication</mainClass>
+                </configuration>
 			</plugin>
 		</plugins>
 	</build>
